WGM-101 Fixed payment information on mobile. Changed thumbnail image size. Change page title styling. Fixed sign in mobile. Adjusted styling on PWA.

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/route/CartPage/CartPage.style.override.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/route/CartPage/CartPage.style.override.scss
@@ -18,7 +18,7 @@
         font-size: 20px;
 
         @include after-mobile {
-            font-size: 40px;
+            font-size: 30px;
             margin-top: 60px
         }
     }
